--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,12 @@
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1",
+    "tw-elements-react": "^1.0.0-alpha-end",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/postcss": "^4.0.14",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
