making real time efficient

--- a/backend/.env
+++ b/backend/.env
@@ -10,4 +10,7 @@ CLOUDINARY_API_SECRET = Aih_r4jEBzoWviavlgBQayMdzxo
 ADMIN_PASSWORD = cognitechlabz
 ADMIN_EMAIL = cognitechlabz@gmail.com
 
-ACCESS_TOKEN_SECRET = asljdalkjaksosaidpoxaskcwqdjpqjcajcj
+ACCESS_SECRET_KEY = asljdalkjaksosaidpoxaskcwqdjpqjcajcj
+ACCESS_EXPIRES = 1d
+REFRESH_SECRET_KEY = asljdalkjaksosaidpoxaskcwqdjpqascascda
+REFRESH_EXPIRES = 30d
